
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* Xploit_way; int port; int overflow_string_size; } ;


 TYPE_1__* Xploiting_ways ;
 int printf (char*,...) ;

void
show_types()
{
 int i;
 printf("\n\t\t\t-* Available Typez *-\n\n");
 for(i=0;(Xploiting_ways[i].Xploit_way!=((void*)0));i++)
 {
  printf("Type Number: %d\nXploit Way : %s\nPort       : %d\nOverflow string size : %d\n-************************-\n",i
        ,Xploiting_ways[i].Xploit_way
        ,Xploiting_ways[i].port
        ,Xploiting_ways[i].overflow_string_size);
 }
}
